--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -14,6 +14,7 @@
   position: fixed;
   top: 0;
   left: 0;
+  z-index: 99;
   height: 70px;
   width: 100%;
   background-color: var(--background);
