--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,16 @@
 @import "tailwindcss";
 
-.app{
-    background-image: url("./assets/background.jpg");
-    background-size: contain;
-    background-repeat: no-repeat;
+.home-background{
+  width: 100%;
+  height: 100%; position: absolute;
+  max-height: 821.34px;
+  z-index: -10;
+  background-image: url("./assets/background.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  /* --- La magia del parallax --- */
+  /* background-attachment: fixed; */
+  /* background-position: center center; Centra la imagen */
 }
 .no-background{
     background-image: none !important;
@@ -45,7 +52,20 @@
 @import "tw-animate-css";
 @custom-variant dark (&:where(.dark, .dark *));
 
+.userlayout .cl-internal-friqq3{
+    height: 40px;
+    width: 40px;
+}
+.userlayout .cl-internal-14s4tiz{
+    height: 40px;
+    width: 40px;
+}
+    
 @theme{
+  --color-primary: #bd9554;
+  --color-primary-50: rgba(189,149,52,0.5);
+
+
   --animate-hidegap: hidegap .3s cubic-bezier(0.77,0,0.18,1) forwards;
   @keyframes hidegap {
     0% {
