--- a/src/components/Header/styles.css
+++ b/src/components/Header/styles.css
@@ -13,11 +13,8 @@
 .header {
     top: 0;
     left: 0;
-    height: 90px; /* Ajusta según el diseño */
     z-index: 1000;
     width: 100%;
-    padding-top: 20px;
-    padding-bottom: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
     /* z-index: 1000; */
     transition: var(--transition);
@@ -30,7 +27,8 @@
     box-shadow: var(--shadow);
     background-color: rgba(255, 255, 255);
     backdrop-filter: blur(10px);
-    position: sticky;
+    max-height: 56px;
+    position: fixed;
     color:#181818;
 }
 
@@ -85,10 +83,11 @@
 .nav-link {
     font-size: 14px;
     text-decoration: none;
-    font-weight: 300;
-    padding: 0.5rem 0;
+    font-weight: 400;
+    line-height: 70px;
+    text-transform: uppercase;
     position: relative;
-    transition: var(--transition);
+    transition: all 250ms ease;
 }
 
 .nav-link::after {
@@ -99,13 +98,24 @@
     width: 0;
     height: 2px;
     background-color: var(--primary-color);
-    transition: var(--transition);
-
-
+    transition: all 250ms ease;
 }
 
 .nav-link:hover::after {
     width: 100%;
+}
+
+.header-number {
+    transition: all 300ms ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1em 2.5em;
+    height: 41.03px;
+    width: 165.05px;
+    font-size: 12.024px;
+    font-weight: 400;
+    letter-spacing: 1px;
 }
 
 /* Mobile Menu Button */
