--- a/src/index.css
+++ b/src/index.css
@@ -253,3 +253,14 @@
     @apply bg-background text-foreground;
     }
 }
+
+input[type=number]::-webkit-inner-spin-button,
+input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Para Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
